adicionando a seção home

--- a/index.html
+++ b/index.html
@@ -52,7 +52,44 @@
             </nav>
         </header> <!-- //cabeçalho -->
 
-        
+        <section id="home"> <!-- Seção home -->
+            <div class="container">
+                <diV class="row">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h1 class="display-4">Suas contas, descomplicadas</h1>
+                            <p>
+                                Usado por mais de 1 milão de pessoas, o Finans é uma ferramenta online que vai facilitar
+                                sua vida financeira.
+                            </p>
+
+                            <form class="mt-4 mb-4">
+                                <div class="input-group">
+                                    <input type="text" placeholder="Seu e-email" class="form-control">
+                                    <div class="input-group-append">
+                                        <button type="button" class="btn btn-primary">Cadastre-se</button>
+                                    </div>
+                                </div>
+                            </form>
+
+                            <p>
+                                Disponível para
+                                <a href="#" class="btn btn-outline-light">
+                                    <i class="fa-brands fa-android fa-lg"></i>
+                                </a>
+                                <a href="" class="btn btn-outline-light">
+                                    <i class="fa-brands fa-apple fa-lg"></i>
+                                </a>
+                            </p>
+
+                        </div>                    
+                    </div>
+                    <div class="col-md-6 d-none d-md-block">
+                        <img src="img/capa-mulher.png">
+                    </div>
+                </diV>
+            </div>
+        </section> <!-- /fechameneto da seção home -->
        
         <!-- Optional JavaScript; choose one of the two! -->
 
