adicionando a seção juros

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     </head>
     <body>
 
-        <!-- Inicio do cabeçalho -->
         <header> <!-- Cabeçalho -->
             <nav class="navbar navbar-expand-md navbar-light bg-warning">
                 <div class="container" >
@@ -90,6 +89,47 @@
                 </diV>
             </div>
         </section> <!-- /fechameneto da seção home -->
+
+        <section class="caixa"> <!-- Início seção saiba -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Saiba para onde vai o seu dinheiro</h2>
+                            <p>
+                                Com o Finans, você categoriza todos os seus laçamentos. Com gráficos simples, você sabe de
+                                onde vem e para onde vai o seu dinheiro.
+                            </p>
+                            <a href="#" class="btn btn-primary">Veja mais</a>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <img src="img/saiba.png" class="img-fluid">
+                    </div>
+                </div>
+            </div>
+        </section> <!-- /Fim seção saiba-->
+
+        <section class="caixa"> <!-- Início seção juros -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6">
+                        <img src="img/juros.png" class="img-fluid">
+                    </div>
+
+                    <div class="col-md-6 d-flex">
+                        <div class="align-self-center">
+                            <h2>Pare de pagar juros e economize</h2>
+                            <p>
+                                Manter as contas em dia é sempre um problema? O Finans avisa você: receba alertas de contas
+                                a pagar e a receber.
+                            </p>
+                            <a href="#" class="btn btn-primary">Veja mais</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- /Fim seção juros-->
        
         <!-- Optional JavaScript; choose one of the two! -->
 
