--- a/index.html
+++ b/index.html
@@ -130,6 +130,37 @@
                 </div>
             </div>
         </section> <!-- /Fim seção juros-->
+
+        <section class="caixa"> <!-- Início seção recursos -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <img src="img/facil.png" class="img-fluid">
+                        <h4>Fácil de usar</h4>
+                        <p>
+                            O Finans vai além do básico e permite  que você faça controles incríveis, essenciais para suas
+                            finanças. Simples como tem que ser!
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/economize.png" class="img-fluid">
+                        <h4>Economize seu tempo</h4>
+                        <p>
+                            Tempo é dinheiro! Em segundos, você tem tudo sob controle e aproveite seu tempo com o que realmente
+                            importa para você!
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/suporte.png" class="img-fluid">
+                        <h4>Suporte amigo</h4>
+                        <p>
+                            Dúvidas? Perguntas? Nosso suporte super legar ajuda você! A gente tá aqui para resolver seus problemas
+                            e deixar sua vida bem mais fácil! 
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section> <!-- /Fim seção recursos-->
        
         <!-- Optional JavaScript; choose one of the two! -->
 
