--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             </div>
         </section> <!-- /Fim seção saiba-->
 
-        <section class="caixa"> <!-- Início seção juros -->
+        <section id="" class="caixa"> <!-- Início seção juros -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
@@ -131,7 +131,7 @@
             </div>
         </section> <!-- /Fim seção juros-->
 
-        <section class="caixa"> <!-- Início seção recursos -->
+        <section id="recursos" class="caixa"> <!-- Início seção recursos -->
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
@@ -161,6 +161,38 @@
                 </div>
             </div>
         </section> <!-- /Fim seção recursos-->
+
+        <footer class="mt-4 mb-4">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-8 d-flex">
+                        <p>
+                            <a href="#home">Home</a>
+                            <a href="#recursos">Recursos</a>
+                            <a href="#beneficios">Beneficios</a>
+                            <a href="#preços">Preços</a>
+                        </p>
+                    </div>
+                    <div class="col-md-4 d-flex justify-content-end">
+                        <a href="#" class="btn btn-outline-dark ms-2">
+                            <i class="fa-brands fa-whatsapp fa-lg"></i>
+                        </a>
+                        <a href="#" class="btn btn-outline-dark ms-2">
+                            <i class="fa-brands fa-facebook fa-lg"></i>
+                        </a>
+                        <a href="#" class="btn btn-outline-dark ms-2">
+                            <i class="fa-brands fa-twitter fa-lg"></i>
+                        </a>
+                        <a href="#" class="btn btn-outline-dark ms-2">
+                            <i class="fa-brands fa-instagram fa-lg"></i>
+                        </a>
+                        <a href="#" class="btn btn-outline-dark ms-2">
+                            <i class="fa-brands fa-youtube fa-lg"></i>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </footer>
        
         <!-- Optional JavaScript; choose one of the two! -->
 
